<resources>
    <string name="app_name">Task Manager Application</string>
    <string name="create_new_task">Create New Task</string>
    <string name="add_or_edit_task">Add or Edit Task</string>
    <string name="input_your_task_title">Input your task title</string>
    <string name="input_your_task_description">Input your task description</string>
    <string name="input_your_task_due_date">Input your task due date</string>
    <string name="delete_task">Delete Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="save_task">Save Task</string>
    <string name="task_description">Task description</string>
    <string name="task_title">Task title</string>
    <string name="textview">TextView</string>
</resources>