<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/add_or_edit_task"
        android:id="@+id/test"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_title"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/test"
        android:hint="@string/input_your_task_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/edittext_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_title"
        android:layout_marginTop="26dp"
        android:hint="@string/input_your_task_description"
        android:inputType="text" />

    <EditText
        android:id="@+id/edittext_duedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_description"
        android:layout_marginTop="26dp"
        android:hint="@string/input_your_task_due_date"
        android:inputType="text" />

    <Button
        android:id="@+id/btnAddTaskToDb"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="#123456"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_duedate"
        android:layout_marginTop="32dp"
        android:text="@string/save_task" />


</RelativeLayout>
