<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetail">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/textview"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_title" />

    <TextView
        android:id="@+id/textview_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_description" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_due_date">

        <Button
            android:id="@+id/button_edit_task"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="144dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="#123456"
            android:textColor="@color/white"
            android:text="@string/edit_task"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_delete_task"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="144dp"
            android:layout_marginStart="-30dp"
            android:backgroundTint="#123456"
            android:textColor="@color/white"
            android:text="@string/delete_task"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>